--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
    <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://gennsegg.github.io/Briefcase/">
+<meta property="og:url" content="https://gennsegg.github.io/Portafolio/">
 <meta property="og:title" content="Genaro Segura - Frontend Developer JR and salesforce ADM">
 <meta property="og:description" content="Genaro Segura - Frontend Developer JR and salesforce ADM">
 <meta property="og:image" content="https://user-images.githubusercontent.com/62628408/152209979-0890fce1-2450-4e4a-b65c-7cd7fc4c3daf.png">
