--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/global.css" />
+    <link rel="stylesheet" href="global.css"/>
+    <link rel="stylesheet" href="style.css"/>
 
     <!-- Favicon -->
     <link
