--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
       <section class="content container">
         <div class="content-text">
           <h1>Genaro Segura<span class="underline"></span></h1>
-          <h2 class="text-secondary">Frontend Developer JR,</h2>
+          <h2 class="text-secondary">Administrator Salesforce,</h2>
           <h2 class="text-secondary">Salesforce ADM</h2>
           <h2 class="text-secondary"></h2>
           <p>
             With a passion for building solutions through open source projects
           </p>
           <a
-            href="https://drive.google.com/file/d/1dqkdkN1zfOt3MKsFKyqEuAF7io6kXt0z/view?usp=drive_link"
+            href="https://genarosegu.github.io/CV-Resumen/"
             class="btn"
             >Resume</a
           >
@@ -157,7 +157,7 @@
           </h2>  
 
           <p>
-            I'm a frontend developer Jr and Salesforce ADM in mexico
+            I'm a Salesforce ADM in mexico
             <a
               href="https://trailblazer.me/id/sgenaro"
               target="_blank"
@@ -217,7 +217,7 @@
                 <span class="fas fa-search color-1"></span>
                 <h3>ADM Salesforce (Tresguerras Logistics)</h3>
                 <p>
-                  Developer of tasks and automated processes
+                  Administration of tasks and automated processes
                   Data modelling, management and security
                   Management and development of key indicators for the project from start to finish
                   Development, configuration and implementation of customized technological solutions
@@ -330,7 +330,7 @@
           <!-- Page 2 -->
           <article class="project-content">
             <div class="project-image project-image-two">
-              <img src="./img/projects/Ranger double.PNG" alt="skeep project" />
+              <img src="./Ranger double.PNG" alt="Ranger double" />
               <a
                 class="btn btn-three"
                 href="https://skeep.netlify.app/"
