--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
          <article class="project-content">
           <div class="project-image project-image-five">
             <img
-              src="./img/projects/Genaro_final.jpg"
+              src="./Genaro_final.jpg"
               alt="ADM Salesforce Tresguerras"
             />
             <a
@@ -301,10 +301,6 @@
 
           <div class="card-content">
             <h2>ADM Salesforce Tresguerras </h2>
-            <p>
-              This is a clone of Microsoft's <a href="https://support.microsoft.com/en-us/windows/see-what-s-on-the-start-menu-a8ccb400-ad49-962b-d2b1-93f453785a13">Windows 10 start</a> menu. I built this with
-              CSS grid
-            </p>
             <div class="project-info">
               <div class="stack">
                 <small class="language">HTML5</small>
@@ -369,14 +365,9 @@
           <article class="project-content">
             <div class="project-image project-image-four">
               <img
-                src="./img/projects/HTML 5.PNG"
-                alt="Hotel Zeitaku Project"
+                src="./HTML 5.PNG"
+                alt="HTML 5"
               />
-              <a
-                class="btn btn-five"
-                href="https://hotelzeitaku.netlify.app/"
-                target="_blank"
-                >Preview Link</a
               >
             </div>
 
@@ -410,7 +401,7 @@
           <article class="project-content">
             <div class="project-image project-image-one">
               <img
-                src="./img/projects/WhatsApp Image 2023-06-20 at 14.53.35 (1).png"
+                src="./WhatsApp Image 2023-06-20 at 14.53.35 (1).png"
                 alt="Transformed minds project"
               />
               <a
@@ -443,7 +434,7 @@
           <article class="project-content">
             <div class="project-image project-image-one">
               <img
-                src="./img/projects/WhatsApp Image 2023-06-20 at 14.53.35.png"
+                src="./WhatsApp Image 2023-06-20 at 14.53.35.png"
                 alt="Leader Team Building"
               />
               <a
