--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <meta property="twitter:image" content="https://user-images.githubusercontent.com/62628408/152209979-0890fce1-2450-4e4a-b65c-7cd7fc4c3daf.png">
 
 <meta name="title" content="Genaro Segura - Frontend Developer JR and salesforce ADM">
-    <title>Genaro Segura - Frontend Developer JR and salesforce ADM</title>
+    <title>Genaro Segura - Salesforce Administrator</title>
 
     <!-- Style -->
     <link
@@ -157,7 +157,7 @@
           </h2>  
 
           <p>
-            I'm a Salesforce ADM in mexico
+            I'm a Salesforce Administrator in mexico
             <a
               href="https://trailblazer.me/id/sgenaro"
               target="_blank"
@@ -167,8 +167,8 @@
 
           <p>
             I am experience in Salesforce ADM, i have built some other
-            <a href="https://github.com/gennsegg">projects</a> with
-            HTML5 Developer and CSS. I am currently working on improving my
+            <a href="https://github.com/GenaroSegu">projects</a> with
+            HTML5 Developer and CSS3. I am currently working on improving my
             developer skills in salesforce.
           </p>
 
@@ -179,18 +179,18 @@
               >eddiehub</a
             >,
             <a
-              href="https://github.com/gennsegg"
+              href="https://github.com/GenaroSegu"
               target="_blank"
               >CommunityPro</a
-            >, and learn other topics <a href="https://github.com/gennsegg" Learn other topics.
+            >, and learn other topics <a href="https://github.com/GenaroSegu" Learn other topics.
           </p>
 
           <p>
-            Technologies and tools I'm currently exploring and interested about.
+            Technologies and tools that I am currently exploring and interested in developing and managing.
           </p>
 
           <ul class="language">
-            <li>ADM Salesforce</li>
+            <li>Administrator Salesforce</li>
             <li>Developer JR Salesforce</li>
             <li>HTML5</li>
             <li>CSS3</li>
@@ -293,7 +293,7 @@
             />
             <a
               class="btn btn-six"
-              href="https://windows-10-start-menu.netlify.app/"
+              href="https://genarosegu.github.io/Portafolio/"
               target="_blank"
               >Preview Link</a
             >
@@ -309,12 +309,12 @@
 
               <div class="project-links">
                 <a
-                  href="https://github.com/Evavic44/Windows-10-Start-menu"
+                  href="https://github.com/GenaroSegu"
                   target="_blank"
                   ><i class="fab fa-github"></i
                 ></a>
                 <a
-                  href="https://windows-10-start-menu.netlify.app/"
+                  href="https://genarosegu.github.io/Portafolio/"
                   target="_blank"
                   ><i class="fas fa-external-link-alt"></i
                 ></a>
@@ -329,7 +329,7 @@
               <img src="./Ranger double.PNG" alt="Ranger double" />
               <a
                 class="btn btn-three"
-                href="https://skeep.netlify.app/"
+                href="https://genarosegu.github.io/Portafolio/"
                 target="_blank"
                 >Preview Link</a
               >
@@ -374,7 +374,7 @@
             <div class="card-content">
               <h2>CSS Certification</h2>
               <p>
-                Certification in HTML and CSS as a developer in the learning process <a href="https://www.traversymedia.com"></a> Modern HTML & CSS From The Beginning (Including Sass) course on <a href="https://www.udemy.com/">Udemy</a>.
+                Certification in HTML and CSS as a developer in the learning process <a href=""></a> Modern HTML & CSS From The Beginning (Including Sass) course on <a href="">Udemy</a>.
               </p>
               <div class="project-info">
                 <div class="stack">
@@ -385,7 +385,7 @@
 
                 <div class="project-links">
                   <a
-                    href="https://github.com/gennsegg"
+                    href="https://github.com/GenaroSegu"
                     target="_blank"
                     ><i class="fab fa-github"></i
                   ></a>
@@ -439,7 +439,7 @@
               />
               <a
                 class="btn btn-one"
-                href="https://hashnode-clone-sass.netlify.app/"
+                href="https://genarosegu.github.io/Portafolio/"
                 target="_blank"
                 >Preview Link</a
               >
@@ -475,14 +475,14 @@
           <div class="card">
             <div class="icon-header">
               <a
-                href="https://github.com/Evavic44/Periodic-Table"
+                href="https://github.com/GenaroSegu"
                 target="_blank"
                 rel="no-opener no-referrer"
                 title="Github"
                 ><span class="fab fa-github"></span
               ></a>
               <a
-                href="https://github.com/gennsegg/encriptador.git"
+                href="https://github.com/GenaroSegu/Encriptador-Project"
                 target="_blank"
                 rel="no-opener no-referrer"
                 title="Live Preview"
@@ -503,7 +503,7 @@
           <div class="card">
             <div class="icon-header">
               <a
-                href="https://github.com/gennsegg/encriptador.git"
+                href="https://github.com/GenaroSegu/Encriptador-Project"
                 title="Github"
                 target="_blank"
                 rel="no-opener no-referrer"
@@ -523,14 +523,14 @@
           <div class="card">
             <div class="icon-header">
               <a
-                href="https://github.com/Evavic44/Task-tracker"
+                href="https://github.com/GenaroSegu/Portafolio"
                 target="_blank"
                 rel="no-opener no-referrer"
                 title="Github"
                 ><span class="fab fa-github"></span
               ></a>
               <a
-                href="https://todo-tasktracker.netlify.app/"
+                href="https://github.com/GenaroSegu/Portafolio"
                 target="_blank"
                 rel="no-opener no-referrer"
                 title="Live Preview"
@@ -554,7 +554,7 @@
         <div class="container">
           <div class="social icons">
             <a
-              href="https://github.com/gennsegg"
+              href="https://genarosegu.github.io/Portafolio/"
               title="Github"
               target="_blank"
               class="fab fa-github"
