--- a/index.html
+++ b/index.html
@@ -301,6 +301,13 @@
 
           <div class="card-content">
             <h2>ADM Salesforce Tresguerras </h2>
+             <p>
+                I currently work as a salesforce administrator in the company called tresguerras logistycs <a
+                  href="https://trailblazer.me/id/sgenaro"
+                  target="_blank"
+                  >salesforce</a
+                >
+              </p>
             <div class="project-info">
               <div class="stack">
                 <small class="language">HTML5</small>
