--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
          <article class="project-content">
           <div class="project-image project-image-five">
             <img
-              src="./Genaro_final.jpg"
+              src="./video.mp4"
               alt="ADM Salesforce Tresguerras"
             />
             <a
