--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           <article class="project-content">
             <div class="project-image project-image-one">
               <img
-                src="./WhatsApp Image 2023-06-20 at 14.53.35 (1).png"
+                src="./Presentacion TP.JPG"
                 alt="Transformed minds project"
               />
               <a
