--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
           
           </article>
           <article class="project-content">
-            <div class="project-image project-image-one">
-              <img
-                src="./WhatsApp Image 2023-06-20 at 14.53.35 (1).png"
+            <div class="project-videol project-video-one">
+              <video
+                video src="./video.mp4" class: "intitucional__video"
                 alt="Transformed minds project"
               />
               <a
