--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/global.css" />
-    <link rel="stylesheet" href="global.css"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="css/global.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
 
     <!-- Favicon -->
     <link
@@ -288,7 +288,7 @@
          <article class="project-content">
           <div class="project-image project-image-five">
             <img
-              src="./Genaro_final.jpg"
+              src="/img/Genaro_final.jpg"
               alt="ADM Salesforce Tresguerras"
             />
             <a
@@ -333,7 +333,7 @@
           <!-- Page 2 -->
           <article class="project-content">
             <div class="project-image project-image-two">
-              <img src="./Ranger double.PNG" alt="Ranger double" />
+              <img src="/img/Ranger double.PNG" alt="Ranger double" />
               <a
                 class="btn btn-three"
                 href="https://genarosegu.github.io/Portafolio/"
@@ -408,7 +408,7 @@
           <article class="project-content">
             <div class="project-videol project-video-one">
               <video
-                video src="./video.mp4" class: "intitucional__video"
+                video src="/img/TeamTP.png" class: "Team Leader"
                 alt="Transformed minds project"
               />
               <a
@@ -441,7 +441,7 @@
           <article class="project-content">
             <div class="project-image project-image-one">
               <img
-                src="./WhatsApp Image 2023-06-20 at 14.53.35.png"
+                src="/img/TeamLeader.png" class="Team Leader Coaching"
                 alt="Leader Team Building"
               />
               <a
@@ -607,7 +607,7 @@
             <h2 class="head-text">
           Contact<span class="underline underline-secondary"></span>
         </h2>
-            <h2 class="text-secondary">Get In Touch</h2>
+            <h2 class="text-secondary">Contact Me</h2>
             <p>
               I am open to contact us about any project.
             </p>
