--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
           <article class="project-content">
             <div class="project-videol project-video-one">
               <video
-                video src="/img/TeamTP.png" class: "Team Leader"
+                video src="../img/TeamTP.png" class: "Team Leader"
                 alt="Transformed minds project"
               />
               <a
