--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
          <article class="project-content">
           <div class="project-image project-image-five">
             <img
-              src="/img/Genaro_final.jpg"
+              src="./Genaro_final.jpg"
               alt="ADM Salesforce Tresguerras"
             />
             <a
@@ -333,7 +333,7 @@
           <!-- Page 2 -->
           <article class="project-content">
             <div class="project-image project-image-two">
-              <img src="/img/Ranger double.PNG" alt="Ranger double" />
+              <img src="./Ranger double.PNG" alt="Ranger double" />
               <a
                 class="btn btn-three"
                 href="https://genarosegu.github.io/Portafolio/"
@@ -408,7 +408,7 @@
           <article class="project-content">
             <div class="project-videol project-video-one">
               <video
-                video src="../TeamTP.png" class: "Team Leader"
+                video src="./TeamTP.png" class: "Team Leader"
                 alt="Transformed minds project"
               />
               <a
@@ -441,7 +441,7 @@
           <article class="project-content">
             <div class="project-image project-image-one">
               <img
-                src="/img/TeamLeader.png" class="Team Leader Coaching"
+                src="./TeamLeader.png" class="Team Leader Coaching"
                 alt="Leader Team Building"
               />
               <a
